aggiunti application properties nel config security